--- a/Jenkinsfile/Jenkinsfile
+++ b/Jenkinsfile/Jenkinsfile
@@ -1,25 +1,29 @@
 pipeline {
     agent any
+
     environment {
-        VAULT_ADDR = credentials('VAULT_ADDR')
-        VAULT_TOKEN = credentials('VAULT_TOKEN')
         PATH = "/opt/sonar-scanner/bin:$PATH"
         TERRAFORM_DIR = "terraform/"
-        
     }
+
     stages {
-        
+
         stage('Test Vault') {
             steps {
-                sh '''
-                echo "Testing Vault Connection..."
-                export VAULT_ADDR="${VAULT_ADDR}"
-                export VAULT_TOKEN="${VAULT_TOKEN}"
+                withCredentials([
+                    string(credentialsId: 'VAULT_ADDR', variable: 'VAULT_ADDR'),
+                    string(credentialsId: 'VAULT_TOKEN', variable: 'VAULT_TOKEN')
+                ]) {
+                    sh '''
+                    echo "Testing Vault Connection..."
+                    export VAULT_ADDR="${VAULT_ADDR}"
+                    export VAULT_TOKEN="${VAULT_TOKEN}"
 
-                vault read -format=json aws/creds/dev-role > aws_creds.json || { echo "Vault read failed"; exit 1; }
-                jq -r '.data.access_key' aws_creds.json > access_key.txt
-                jq -r '.data.secret_key' aws_creds.json > secret_key.txt
-                '''
+                    vault read -format=json aws/creds/dev-role > aws_creds.json || { echo "Vault read failed"; exit 1; }
+                    jq -r '.data.access_key' aws_creds.json > access_key.txt
+                    jq -r '.data.secret_key' aws_creds.json > secret_key.txt
+                    '''
+                }
             }
         }
 
@@ -45,9 +49,8 @@ pipeline {
                             -Dsonar.sources=src \
                             -Dsonar.host.url=http://54.167.12.16:9000/ \
                             -Dsonar.login=sqa_1b4f3fa82cee6f3cad14282cd857512b1459bda0 | tee sonar-report.txt
-                           '''
-                    }      
-
+                        '''
+                    }
                 }
             }
         }
@@ -72,7 +75,7 @@ pipeline {
                     tfsec . > tfsec-results.json || { echo "TFSec scan failed"; exit 1; }
                     '''
                 }
-                archiveArtifacts artifacts: 'terraform/tfscan-report.txt', allowEmptyArchive: true
+                archiveArtifacts artifacts: 'terraform/tfsec-results.json', allowEmptyArchive: true
             }
         }
 
@@ -85,161 +88,3 @@ pipeline {
 
                     echo "Planning Terraform changes..."
                     terraform plan -out=tfplan -var="aws_access_key=$(cat ../access_key.txt)" -var="aws_secret_key=$(cat ../secret_key.txt)"
-                    '''
-                }
-            }
-        }
-
-        stage('Docker Build and Trivy Scan') {
-            steps {
-                dir('src') {
-                    sh '''
-                    echo "Fetching Docker credentials from Vault..."
-                    export VAULT_ADDR="${VAULT_ADDR}"
-                    export VAULT_TOKEN="${VAULT_TOKEN}"
-
-                    DOCKER_USERNAME=$(vault kv get -field=username secret/docker)
-                    DOCKER_PASSWORD=$(vault kv get -field=password secret/docker)
-
-                    echo "Building Docker image..."
-                    docker build -t $DOCKER_USERNAME/sample-ecommerce-nodejs-app:latest . || { echo "Docker build failed"; exit 1; }
-
-                    echo "Scanning Docker image with Trivy..."
-                    trivy image --severity HIGH,CRITICAL $DOCKER_USERNAME/sample-ecommerce-nodejs-app:latest > trivy-results.json
-
-                    echo "Logging in to Docker Hub..."
-                    echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-
-                    echo "Pushing Docker image to Docker Hub..."
-                    docker push $DOCKER_USERNAME/sample-ecommerce-nodejs-app:latest
-                    '''
-                    echo "Archiving Trivy scan results..."
-                    archiveArtifacts artifacts: 'trivy-results.json', allowEmptyArchive: true
-
-                    
-                }
-            }
-        }
-
-    stage('Nexus Integration') {
-        steps {
-            script {
-                echo 'Fetching Nexus credentials from Vault...'
-                // Fetch credentials from Vault
-                NEXUS_USERNAME = sh(script: 'vault kv get -field=username nexus/credentials', returnStdout: true).trim()
-                NEXUS_PASSWORD = sh(script: 'vault kv get -field=password nexus/credentials', returnStdout: true).trim()
-                NEXUS_REPO_URL = sh(script: 'vault kv get -field=repo_url nexus/credentials', returnStdout: true).trim()
-
-                echo 'Uploading Node.js app to Nexus...'
-                // Create a temporary directory for the archive
-                sh '''
-                mkdir -p tmp
-                tar -czf tmp/app.tar.gz src/
-                '''
-                
-                // Upload the archive to Nexus
-                sh """
-                curl -u ${NEXUS_USERNAME}:${NEXUS_PASSWORD} \
-                    --upload-file tmp/app.tar.gz \
-                    ${NEXUS_REPO_URL}/repository/nodejs-app/
-                """
-            }   
-        }
-    }
-
-    stage('Terraform Apply') {
-        steps {
-            dir('terraform') {
-                    withCredentials([sshUserPrivateKey(credentialsId: 'ANSIBLE_SSH_KEY', keyFileVariable: 'SSH_KEY_PATH')]) {
-                    sh '''
-
-                    echo "Applying Terraform changes..."
-                    terraform apply -auto-approve tfplan
-
-                    echo "Fetching Public IP from Terraform output..."
-                    PUBLIC_IP=$(terraform output -json public_ips | jq -r '.[0]')
-                    if [ -z "$PUBLIC_IP" ]; then
-                        echo "Error: Terraform did not return a public IP!"
-                        exit 1
-                    fi
-                    echo "Public IP: ${PUBLIC_IP}"
-
-                    echo "Storing Public IP in Ansible inventory..."
-                    mkdir -p ../ansible
-                    echo "[webserver]" > ../ansible/inventory.ini
-                    echo "${PUBLIC_IP} ansible_user=ec2-user ansible_ssh_private_key_file=$WORKSPACE/ansible/ansible_ssh_key.pem" >> ../ansible/inventory.ini
-
-                    echo "Verifying inventory file..."
-                    cat ../ansible/inventory.ini
-                    '''
-                }    
-            }
-        }
-    }
-
-    stage('Run Ansible Playbook') {
-        steps {
-            dir('ansible') {
-                withCredentials([sshUserPrivateKey(credentialsId: 'ANSIBLE_SSH_KEY', keyFileVariable: 'SSH_KEY_PATH')]) {
-                    sh '''
-                    echo "Fixing SSH key permissions..."
-                    chmod 400 ${SSH_KEY_PATH}
-
-                    echo "Copying SSH Key to a Safe Location in Jenkins Workspace..."
-                    mkdir -p $WORKSPACE/ansible
-                    cp ${SSH_KEY_PATH} $WORKSPACE/ansible/ansible_ssh_key.pem
-                    chmod 400 $WORKSPACE/ansible/ansible_ssh_key.pem
-
-                    echo "Verifying inventory file..."
-                    if [ ! -f "inventory.ini" ]; then
-                        echo "Error: inventory.ini not found! Terraform Apply may have failed."
-                        exit 1
-                    fi
-                    cat inventory.ini
-
-                    # Extract the first IP from inventory file
-                    PUBLIC_IP=$(awk 'NR==2 {print $1}' inventory.ini)
-                    if [ -z "$PUBLIC_IP" ]; then
-                        echo "Error: No public IP found in inventory.ini!"
-                        exit 1
-                    fi
-                    echo "Public IP from inventory.ini: $PUBLIC_IP"
-
-                    echo "Disabling SSH host key checking..."
-                    export ANSIBLE_HOST_KEY_CHECKING=False
-
-                    echo "Checking for Ansible playbook..."
-                    if [ ! -f "playbook.yml" ]; then
-                        echo "Error: playbook.yml not found! Ensure the playbook is available."
-                        exit 1
-                    fi
-
-                    echo "Running Ansible Playbook..."
-                    ansible-playbook -i inventory.ini playbook.yml \
-                        --private-key=$WORKSPACE/ansible/ansible_ssh_key.pem \
-                        --user ec2-user -vvv || { echo "Ansible Playbook execution failed!"; exit 1; }
-
-                    echo "Ansible Playbook executed successfully."
-                    '''
-                }   
-            }
-        }
-    }
-
-
-        stage('Send Slack Notification') {
-            steps {
-                script {
-                    def buildStatus = currentBuild.currentResult
-                    def color = (buildStatus == 'SUCCESS') ? 'good' : 'danger'
-
-                    slackSend (
-                        channel: '#team-devops',
-                        message: "🚀 *Jenkins Pipeline Execution Completed: ${buildStatus}*",
-                        color: color
-                    )
-                }
-            }
-        }
-    }
-}
