--- a/Jenkinsfile/Jenkinsfile
+++ b/Jenkinsfile/Jenkinsfile
@@ -200,3 +200,13 @@ pipeline {
                     def color = (buildStatus == 'SUCCESS') ? 'good' : 'danger'
 
                     slackSend(
+                        channel: '#team-devops',
+                        message: "🚀 Pipeline Completed: ${buildStatus}",
+                        color: color
+                    )
+                }
+            }
+        }
+
+    }
+}
